--- a/index.html
+++ b/index.html
@@ -47,15 +47,21 @@
     <a-camera position="0 1.8 500"></a-camera>
 
     <a-assets>
-      <a-asset-item id="ducky-obj" src="ducky.obj"></a-asset-item>
+      <a-asset-item id="ducky-obj" src="v3.obj"></a-asset-item>
     </a-assets>
 
     <a-obj-model
       src="#ducky-obj"
       position="0 1200 -3000"
       rotation="-210 -120 180"
-      scale="8 8 8"
-      material="color: orange">
+      scale="20 20 20"
+      material="color: brown">
+        <a-animation attribute="rotation"
+               dur="8000"
+               fill="forwards"
+               to="0 360 0"
+               repeat="indefinite"
+               direction="alternate-reverse"></a-animation>
     </a-obj-model>
 
   </a-scene>
